fixed layout issues

--- a/style.css
+++ b/style.css
@@ -53,10 +53,9 @@ button:disabled{
   right: 0;
   transform: translateY(-50%);
   width: 500px; 
-  height:100%;
+  height:100vh;
   background-color: black;
   color: white;
-  margin-top: 16px;
   display: flex;
   flex-direction: column;
   justify-content: center;
